unpackaged/main/default/objects/Camp_Lejeune__c/fields/Military_Personnel_Place_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Military_Personnel_Place_of_Birth__c</fullName>
    <description>Military Personnel&#39;s Place of Birth</description>
    <label>Military Personnel Place of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>