unpackaged/main/default/objects/Camp_Lejeune__c/fields/Military_Personnel_RESERVE_BofService__c.field-meta.xml
<CustomField>
    <fullName>Military_Personnel_RESERVE_BofService__c</fullName>
    <description>Military Personnel&#39;s RESERVE -Branch of Service</description>
    <label>Military Personnel&#39;s RESERVE -BofService</label>
    <length>255</length>
    <type>Text</type>
</CustomField>