unpackaged/main/default/objects/Camp_Lejeune__c/fields/Military_Personnel_RESERVE_DE__c.field-meta.xml
<CustomField>
    <fullName>Military_Personnel_RESERVE_DE__c</fullName>
    <description>Military Personnel&#39;s RESERVE - Date Entered</description>
    <label>Military Personnel&#39;s RESERVE DE</label>
    <type>Date</type>
</CustomField>