unpackaged/main/default/objects/Camp_Lejeune__c/fields/Military_Personnel_RESERVE_DR__c.field-meta.xml
<CustomField>
    <fullName>Military_Personnel_RESERVE_DR__c</fullName>
    <description>Military Personnel&#39;s RESERVE - Date Released</description>
    <label>Military Personnel RESERVE - DR</label>
    <type>Date</type>
</CustomField>