unpackaged/main/default/objects/Camp_Lejeune__c/fields/Military_Personnel_RESERVE_SN__c.field-meta.xml
<CustomField>
    <fullName>Military_Personnel_RESERVE_SN__c</fullName>
    <description>Military Personnel&#39;s RESERVE - Service Number</description>
    <label>Military Personnel RESERVE - SN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>