unpackaged/main/default/objects/Camp_Lejeune__c/fields/Military_Personnel_Retired_from_Service__c.field-meta.xml
<CustomField>
    <fullName>Military_Personnel_Retired_from_Service__c</fullName>
    <description>Did this Military Personnel Retire from Military Service</description>
    <label>Military Personnel Retired from Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>