unpackaged/main/default/objects/Camp_Lejeune__c/fields/Military_Personnel_SSN__c.field-meta.xml
<CustomField>
    <fullName>Military_Personnel_SSN__c</fullName>
    <description>Military Personnel&#39;s SSN</description>
    <label>Military Personnel SSN</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>