unpackaged/main/default/objects/Camp_Lejeune__c/fields/Military_Stationed_Family_Mem_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Military_Stationed_Family_Mem_Full_Name__c</fullName>
    <description>If military family member, please state the full name of the individual or family member who was stationed on base.</description>
    <label>Military Stationed Family Mem Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>