unpackaged/main/default/objects/Camp_Lejeune__c/fields/Military_veteran_mil_spouse_or_civ__c.field-meta.xml
<CustomField>
    <fullName>Military_veteran_mil_spouse_or_civ__c</fullName>
    <label>Military veteran, mil. spouse, or civ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Military veteran</fullName>
            </value>
            <value>
                <fullName>military spouse</fullName>
                <label>Military Spouse</label>
            </value>
            <value>
                <fullName>civilian</fullName>
                <label>Civilian</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>