unpackaged/main/default/objects/Camp_Lejeune__c/fields/Name_of_Military_Personell__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Military_Personell__c</fullName>
    <description>Name of Military Personnel Used During Service</description>
    <label>Name Milit Personnel During Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>