unpackaged/main/default/objects/Camp_Lejeune__c/fields/Nature_Of_Presence_At_Camp_Lejeune__c.field-meta.xml
<CustomField>
    <fullName>Nature_Of_Presence_At_Camp_Lejeune__c</fullName>
    <label>Nature Of Presence At Camp Lejeune</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>