unpackaged/main/default/objects/Camp_Lejeune__c/fields/NE_NPD_Details__c.field-meta.xml
<CustomField>
    <fullName>NE_NPD_Details__c</fullName>
    <label>Neuro_Logical_PerfDeficit_Details</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delayed reaction times</fullName>
            </value>
            <value>
                <fullName>Problems with short-term memory</fullName>
            </value>
            <value>
                <fullName>Visual perception</fullName>
            </value>
            <value>
                <fullName>Attention</fullName>
            </value>
            <value>
                <fullName>Color vision</fullName>
            </value>
            <value>
                <fullName>Delayed recall and deficits in visual perception</fullName>
            </value>
            <value>
                <fullName>Decreased blink reflex</fullName>
            </value>
            <value>
                <fullName>Mood effects - Confusion</fullName>
            </value>
            <value>
                <fullName>Mood effects - Depression</fullName>
            </value>
            <value>
                <fullName>Mood effects - Trouble Concentrating</fullName>
            </value>
            <value>
                <fullName>Mood effects - Headaches</fullName>
            </value>
            <value>
                <fullName>Mood effects - Lack of coordination</fullName>
            </value>
            <value>
                <fullName>Mood effects - Sensory disturbances</fullName>
            </value>
            <value>
                <fullName>Mood effects - tension</fullName>
            </value>
            <value>
                <fullName>PTSD</fullName>
            </value>
            <value>
                <fullName>Anxiety</fullName>
            </value>
            <value>
                <fullName>Fatigue</fullName>
            </value>
            <value>
                <fullName>Dementia</fullName>
            </value>
            <value>
                <fullName>Alzheimer&#39;s</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>