unpackaged/main/default/objects/Camp_Lejeune__c/fields/Neurobehavorial_Performance_Defects__c.field-meta.xml
<CustomField>
    <fullName>Neurobehavorial_Performance_Defects__c</fullName>
    <description>More NPD Details to capture Granularity</description>
    <label>Neurobehavorial_Perf_Defects_Details</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delayed recall and deficits in visual perception</fullName>
            </value>
            <value>
                <fullName>Decreased blink reflex</fullName>
            </value>
            <value>
                <fullName>Mood effects - Confusion</fullName>
            </value>
            <value>
                <fullName>Mood effects - Depression</fullName>
            </value>
            <value>
                <fullName>Mood effects - Trouble Concentrating</fullName>
            </value>
            <value>
                <fullName>Mood efects - Headaches</fullName>
            </value>
            <value>
                <fullName>Mood effects - Lack of coordination</fullName>
            </value>
            <value>
                <fullName>Mood efects - Sensory disturbances</fullName>
            </value>
            <value>
                <fullName>Mood effects -  tension</fullName>
            </value>
            <value>
                <fullName>PTSD</fullName>
            </value>
            <value>
                <fullName>Anxiety</fullName>
            </value>
            <value>
                <fullName>Fatigue</fullName>
            </value>
            <value>
                <fullName>Dementia</fullName>
            </value>
            <value>
                <fullName>Alzheimer&#39;s</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>