unpackaged/main/default/objects/Camp_Lejeune__c/fields/Neurological_Effects_Details__c.field-meta.xml
<CustomField>
    <fullName>Neurological_Effects_Details__c</fullName>
    <description>Breaking down NE to capture its granularity</description>
    <label>Neurological_Effects_Details</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delayed reaction times</fullName>
            </value>
            <value>
                <fullName>Problems with short-term memory</fullName>
            </value>
            <value>
                <fullName>Visual perception</fullName>
            </value>
            <value>
                <fullName>Attention</fullName>
            </value>
            <value>
                <fullName>Color vision</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>