unpackaged/main/default/objects/Camp_Lejeune__c/fields/NEW_Military_Personnel_SSN__c.field-meta.xml
<CustomField>
    <fullName>NEW_Military_Personnel_SSN__c</fullName>
    <description>Used to replace the old one that was made as a number field and would not properly accept SSN numbers.</description>
    <label>NEW Military Personnel SSN</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>