unpackaged/main/default/objects/Camp_Lejeune__c/fields/On_base_drink_contaminated_water__c.field-meta.xml
<CustomField>
    <fullName>On_base_drink_contaminated_water__c</fullName>
    <description>While on base, did you drink contaminated water?</description>
    <label>On base drink contaminated water</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>