unpackaged/main/default/objects/Camp_Lejeune__c/fields/Provide_Medical_Records__c.field-meta.xml
<CustomField>
    <fullName>Provide_Medical_Records__c</fullName>
    <description>Requested field by A&amp;G partner client for CL NOK questions</description>
    <label>Provide Medical Records</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Electronically</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>