unpackaged/main/default/objects/Camp_Lejeune__c/fields/Rank_at_the_time_of_discharge__c.field-meta.xml
<CustomField>
    <fullName>Rank_at_the_time_of_discharge__c</fullName>
    <label>Rank at the time of discharge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>