unpackaged/main/default/objects/Camp_Lejeune__c/fields/Records_To_Substantiate_Time_At_CL__c.field-meta.xml
<CustomField>
    <fullName>Records_To_Substantiate_Time_At_CL__c</fullName>
    <label>Records To Substantiate Time At CL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>