unpackaged/main/default/objects/Camp_Lejeune__c/fields/Smoking_Check__c.field-meta.xml
<CustomField>
    <fullName>Smoking_Check__c</fullName>
    <description>Used for smoking check criteria for CL checks.  This determines A&amp;G qualifiers</description>
    <label>Smoking Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Smoked for 1+ Years prior to throat related cancer DX</fullName>
            </value>
            <value>
                <fullName>Smoked less than 1 year prior to throat related cancer DX</fullName>
            </value>
            <value>
                <fullName>Never Smoked</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>