unpackaged/main/default/objects/Camp_Lejeune__c/fields/Symptoms_Complications_Dates__c.field-meta.xml
<CustomField>
    <fullName>Symptoms_Complications_Dates__c</fullName>
    <description>Used for MBM and Zach request on diagnoses post 8/10/2022 to understand the date ranges these symptoms and complications occurred.</description>
    <inlineHelpText>Date ranges for diagnoses post 8/10/2022</inlineHelpText>
    <label>Symptoms/Complications Dates</label>
    <type>TextArea</type>
</CustomField>