unpackaged/main/default/objects/Camp_Lejeune__c/fields/Symptoms_or_Complications__c.field-meta.xml
<CustomField>
    <fullName>Symptoms_or_Complications__c</fullName>
    <description>Requested by Zach and MBM to have additional information for diagnosis after 8/10/2022 that are having issues in court.</description>
    <inlineHelpText>Information for diagnosis after 8/10/2022</inlineHelpText>
    <label>Symptoms or Complications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>