unpackaged/main/default/objects/Camp_Lejeune__c/fields/Tier_1_Injury_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_Injury_Matrix__c</fullName>
    <description>Have you been dx with any of the following cancers, diseases or syndromes? (TIER 1)</description>
    <label>Tier-1 Injury Matrix</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bladder cancer</fullName>
            </value>
            <value>
                <fullName>Kidney cancer</fullName>
            </value>
            <value>
                <fullName>Kidney disease (End stage renal (ESRD), Renal Toxicity, Chronic Kidney Disease, etc.)</fullName>
            </value>
            <value>
                <fullName>Leukemia (All types, adult or childhood)</fullName>
            </value>
            <value>
                <fullName>Liver cancer</fullName>
            </value>
            <value>
                <fullName>Multiple myeloma and myelodysplastic Syndromes</fullName>
            </value>
            <value>
                <fullName>Non-Hodgkin lymphoma</fullName>
            </value>
            <value>
                <fullName>Parkinson&#39;s disease</fullName>
            </value>
            <value>
                <fullName>Systemic sclerosis</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
            <value>
                <fullName>Multiple myeloma and myelodysplastic Syndromes (incl. myeloid cancers and myeloproliferative syndromes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>