unpackaged/main/default/objects/Camp_Lejeune__c/fields/Tier_2_Injury_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_Injury_Matrix__c</fullName>
    <description>If no to previous cancers, were you diagnosed with any of the following cancers, diseases, or syndromes? (TIER 2)</description>
    <label>Tier-2 Injury Matrix</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Esophageal cancer</fullName>
            </value>
            <value>
                <fullName>Lung cancer</fullName>
            </value>
            <value>
                <fullName>Breast Cancer (Male)</fullName>
            </value>
            <value>
                <fullName>Miscarriage / Fetal Death</fullName>
            </value>
            <value>
                <fullName>Congenital Cardiac Defect</fullName>
            </value>
            <value>
                <fullName>Other Serious Birth Defects (Major Malformations, Neural Tube Defects, Oral Cleft Defects, Eye Defects)</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>