unpackaged/main/default/objects/Camp_Lejeune__c/fields/Tier_3_Injury_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Tier_3_Injury_Matrix__c</fullName>
    <description>If no to the previous question, have you been diagnosed with any other forms of cancer or injuries? (TIER 3)</description>
    <label>Tier-3 Injury Matrix</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aplastic Anemia</fullName>
            </value>
            <value>
                <fullName>Brain cancer</fullName>
            </value>
            <value>
                <fullName>Cervical cancer</fullName>
            </value>
            <value>
                <fullName>Prostate cancer</fullName>
            </value>
            <value>
                <fullName>Ovarian cancer</fullName>
            </value>
            <value>
                <fullName>Liver Disease (Cirrhosis, Non-Alcoholic Fatty Liver Disease, Hepatic Steatosis, Liver Failure)</fullName>
            </value>
            <value>
                <fullName>Hodgkin&#39;s Disease (Lymphoma)</fullName>
            </value>
            <value>
                <fullName>Rectal Cancer</fullName>
            </value>
            <value>
                <fullName>Soft Tissue Cancer / Sarcoma</fullName>
            </value>
            <value>
                <fullName>Female Breast Cancer</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
            <value>
                <fullName>Laryngeal Cancer</fullName>
            </value>
            <value>
                <fullName>Oral Cancer</fullName>
            </value>
            <value>
                <fullName>Pharyngeal Cancer</fullName>
            </value>
            <value>
                <fullName>Thyroid Cancer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>