unpackaged/main/default/objects/Camp_Lejeune__c/fields/Tier_6_Pregnant_or_Known__c.field-meta.xml
<CustomField>
    <fullName>Tier_6_Pregnant_or_Known__c</fullName>
    <label>Tier 6 Pregnant or Known</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Miscarriage / Fetal Death- LESS THAN 30 days exposure at CLJ while pregnant</fullName>
            </value>
            <value>
                <fullName>Congenital Cardiac Defect- LESS THAN 30 days exposure at CLJ while pregnant</fullName>
            </value>
            <value>
                <fullName>Other Serious Birth Defects (Major Malformations, Neural Tube Defects, Oral Cleft Defects, Eye Defects)- LESS THAN 30 days exposure at CLJ while pregnant</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>