unpackaged/main/default/objects/Camp_Lejeune__c/fields/Treatment_Facilities_Name_and_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Facilities_Name_and_Addresses__c</fullName>
    <description>Please list all treatment facility names and addresses</description>
    <label>Treatment Facilities Name and Addresses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>