unpackaged/main/default/objects/Camp_Lejeune__c/fields/Utero_Pregnant_at_CL_for_greater_than_30__c.field-meta.xml
<CustomField>
    <fullName>Utero_Pregnant_at_CL_for_greater_than_30__c</fullName>
    <label>Fatal Utero if Pregnant at CL 30</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>More than 30 days</fullName>
            </value>
            <value>
                <fullName>Less than 30 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>