unpackaged/main/default/objects/Camp_Lejeune__c/fields/When_did_you_stop_smoking__c.field-meta.xml
<CustomField>
    <fullName>When_did_you_stop_smoking__c</fullName>
    <label>When did you stop smoking?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>