unpackaged/main/default/objects/Camp_Lejeune__c/fields/While_at_Camp_Lejeune_please_indicated__c.field-meta.xml
<CustomField>
    <fullName>While_at_Camp_Lejeune_please_indicated__c</fullName>
    <description>While at Camp Lejeune, please indicated all locations where you lived, worked or were stationed:</description>
    <label>While at Camp Lejeune, please indicated</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barracks</fullName>
            </value>
            <value>
                <fullName>Berkeley Manor</fullName>
            </value>
            <value>
                <fullName>Camp Geiger</fullName>
            </value>
            <value>
                <fullName>Courthouse Bay</fullName>
            </value>
            <value>
                <fullName>Hadnot Point</fullName>
            </value>
            <value>
                <fullName>Heroes Manor</fullName>
            </value>
            <value>
                <fullName>Holcomb Boulevard</fullName>
            </value>
            <value>
                <fullName>Hospital Point</fullName>
            </value>
            <value>
                <fullName>Hostess House</fullName>
            </value>
            <value>
                <fullName>Knox Cave</fullName>
            </value>
            <value>
                <fullName>Knox Trailer Park</fullName>
            </value>
            <value>
                <fullName>Knox Landing</fullName>
            </value>
            <value>
                <fullName>Mainside Barracks</fullName>
            </value>
            <value>
                <fullName>Midway Park</fullName>
            </value>
            <value>
                <fullName>Montford Point/Camp Johnson</fullName>
            </value>
            <value>
                <fullName>New River</fullName>
            </value>
            <value>
                <fullName>Onslow Beach</fullName>
            </value>
            <value>
                <fullName>On base temporary housing</fullName>
            </value>
            <value>
                <fullName>Paradise Point</fullName>
            </value>
            <value>
                <fullName>Peterfield Point</fullName>
            </value>
            <value>
                <fullName>Rifle Range</fullName>
            </value>
            <value>
                <fullName>Tarawa Terrace</fullName>
            </value>
            <value>
                <fullName>Watkins Grove</fullName>
            </value>
            <value>
                <fullName>Watkins Village</fullName>
            </value>
            <value>
                <fullName>Off base housing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>